add phoneable_by? method to bike

--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -80,7 +80,7 @@
         %td
           Phone
         %td
-          = @user.phone
+          = @user.phone_display
       %tr
         %td
           Website
