--- a/app/views/users/_edit_root.html.haml
+++ b/app/views/users/_edit_root.html.haml
@@ -14,16 +14,16 @@
     %label.form-well-label
     %label.form-well-input
       = f.check_box :notification_newsletters
-      Receive Bike Index newsletter
+      Receive the Bike Index newsletter
   .form-group.row.unnested-field
     %label.form-well-label
     %label.form-well-input{ style: "line-height: 1.5em;" }
       = f.check_box :notification_unstolen
-      Bike Index has permission to contact you if we believe your bike has been stolen,
+      Give us permission to contact you if we believe your bike has been stolen,
       %em
-        even if it hasn't been marked stolen yet -
+        even if it isn't marked stolen -
       %strong
-        #{link_to "Read why", "https://bikeindex.org/news/recovering-bikes-before-they-are-marked-stolen"}
+        #{link_to "Read why you should", "https://bikeindex.org/news/recovering-bikes-before-they-are-marked-stolen"}
   .form-group.row
     = f.label :phone, class: "form-well-label"
     .form-well-input
