--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -131,6 +131,7 @@
             %p
               %em #{@bike.type.titleize} is not marked stolen.
               %strong Believe it is anyway?
+            - if @bike.contact_owner?(current_user)
               %h3 Contact the owner
               - redirect = new_session_url(return_to: "/bikes/#{@bike.id}?contact_owner=true") unless current_user.present?
               #write_them_a_message.collapse{ class: ("in" unless @contact_owner_open), data: { redirect: redirect } }
@@ -141,7 +142,7 @@
                 - @stolen_notification ||= StolenNotification.new(bike: @bike, sender: current_user)
                 = form_for @stolen_notification do |f|
                   = f.hidden_field :bike_id, value: @bike.id
-                  = f.text_field :reference_url, placeholder: 'Link url', class: "form-control additional-field"
+                  = f.text_field :reference_url, placeholder: "Link url for online sighting", class: "form-control additional-field"
                   - if current_user.ambassador?
                     = f.text_area :message, required: true, value: @stolen_notification.default_message, rows: 6, class: "form-control"
                   - else
@@ -149,6 +150,20 @@
 
                   .send-message
                     = f.submit "Send message", class: 'btn btn-primary btn-lg'
+
+              - if @bike.phoneable_by?(current_user)
+                %p.phoneable-by.mt-4
+                  %em
+                    Or call
+                  %strong
+                    Owner's phone number:
+                  %a{ href: "tell:#{@bike.phone}" }
+                    = @bike.phone_display
+            - else
+              %p
+                This user <strong>revoked</strong> permission to contact them prior to their bike being marked stolen.
+              %p
+                Email #{link_to "support@bikeindex.org", "mailto:support@bikeindex.org"} to deal with this.
 
   - if passive_organization.message_kinds.any?
     .geomessages-wrap
