--- a/app/assets/stylesheets/revised/pages/landing/_packages.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_packages.scss
@@ -123,6 +123,7 @@ $compare-packages-blue: rgb(19, 71, 106);
     text-align: left;
   }
   .showPlanFeatures {
+    text-decoration: none;
     span {
       margin: 6px 0;
       width: 100%;
@@ -227,8 +228,9 @@ $compare-packages-blue: rgb(19, 71, 106);
           margin: 0 0 0.5 * $vertical-height;
         }
         th {
-          border-top: 2px solid $compare-packages-table-border;
           border-bottom: 2px solid $compare-packages-table-border;
+          border-top: 2px solid $compare-packages-table-border;
+          text-align: center;
           &:first-of-type {
             border-top-color: transparent;
             border-left-color: transparent;
