--- a/app/views/organized/exports/show.html.haml
+++ b/app/views/organized/exports/show.html.haml
@@ -9,7 +9,7 @@
     .mb-4
       = render partial: '/shared/alert', locals: { body: "You'll be automatically redirected to the labels once processing is finished", type: "success" }
 
-  %table.organized-list-table
+  %table.table-list
     %tbody
       %tr
         %td
