--- a/app/views/organized/messages/show.html.haml
+++ b/app/views/organized/messages/show.html.haml
@@ -4,7 +4,7 @@
       = current_organization.name
     #{@organization_message.kind.titleize} Message
 
-%table.organized-list-table
+%table.table-list
   %tbody
     %tr
       %td
