--- a/app/javascript/stylesheets/_table_extensions.scss
+++ b/app/javascript/stylesheets/_table_extensions.scss
@@ -19,13 +19,17 @@
   @extend .table-bordered;
   @extend .table-sm;
   tr td:first-child {
-    font-size: 80%;
+    font-size: 75%;
     font-style: italic;
+    text-align: right;
+    padding: 9px 4px 4px;
+    line-height: 1.25;
   }
   tr td:first-child.full-width-data {
     font-size: 100%;
     font-style: normal;
   }
+  // use last, rather than first, to enable full width single rows
   tr td:last-child {
     width: 85%; // This is effectively min-width for tables
   }
