--- a/app/views/organized/stickers/index.html.haml
+++ b/app/views/organized/stickers/index.html.haml
@@ -13,7 +13,7 @@
     .col-sm-2.text-right
       = submit_tag "Search", class: "btn btn-primary"
     .col-md-12
-      .btn-group{ role: "group", "aria-label" => "Size", data: { toggle: "buttons" }, style: "margin-top: 0.3rem;" }
+      .btn-group#organized-bike-code-claimedness{ role: "group", "aria-label" => "Claimedness", data: { toggle: "buttons" }, style: "margin-top: 0.3rem;" }
         - claimedness = "claimed" if params[:claimedness] == "claimed"
         - claimedness ||= "unclaimed" if params[:claimedness] == "unclaimed"
         - claimedness ||= "all"
@@ -42,6 +42,7 @@
         Bike
       %th
         Code
+      %th
     %tbody
       - @bike_codes.each do |bike_code|
         %tr
@@ -55,9 +56,15 @@
           %td
             - if bike_code.claimed?
               / For these, use bike_id to avoid loading association
-              = organized_bike_text(bike_code.bike)
+              = link_to  organized_bike_text(bike_code.bike)
           %td
-            = link_to bike_code.code, "/bikes/scanned/#{bike_code.code}?organization_id=#{current_organization.to_param}"
+            = bike_code.code
+          %td
+            .text-center
+              = link_to "/stickers/#{bike_code.code}?organization_id=#{current_organization.to_param}", class: "gray-link small" do
+                %span.hidden-md-down
+                  user sticker
+                view
 
 .paginate-container.paginate-container-bottom
   = paginate @bike_codes
