--- a/app/assets/stylesheets/revised.scss
+++ b/app/assets/stylesheets/revised.scss
@@ -316,6 +316,13 @@ body {
   margin-bottom: $vertical-height;
 }
 
+.mt-0 {
+  margin-top: 0;
+}
+.mb-0 {
+  margin-bottom: 0;
+}
+
 .small {
   @extend small;
 }
