--- a/app/assets/stylesheets/revised/pages/bikes/show.scss
+++ b/app/assets/stylesheets/revised/pages/bikes/show.scss
@@ -137,7 +137,6 @@
     .unstolen-notification-box {
       @extend .clearfix;
 
-      border-left: 1px solid $gray-lightish;
       padding-bottom: $vertical-height;
 
       .form-control {
@@ -149,7 +148,7 @@
     .geomessages-wrap {
       text-align: right;
       padding: 8px 15px;
-      background: $gray-lighter;
+      background: #fdfdfd;
       border-top: 1px solid $gray-lightish;
 
       span {
