and there is the functionality addition

--- a/app/views/organized/stickers/edit.html.haml
+++ b/app/views/organized/stickers/edit.html.haml
@@ -14,7 +14,7 @@
         Sticker
       %td
         = @bike_code.code
-        = link_to "user sticker view", "/stickers/#{@bike_code.code}", class: "gray-link small"
+        / = link_to "search bike sticker view", "/stickers/#{@bike_code.code}", class: "gray-link small"
     %tr
       %td
         Claimed
