--- a/app/assets/stylesheets/revised.scss
+++ b/app/assets/stylesheets/revised.scss
@@ -316,6 +316,13 @@ body {
   margin-bottom: $vertical-height;
 }
 
+.mt-0 {
+  margin-top: 0;
+}
+.mb-0 {
+  margin-bottom: 0;
+}
+
 .small {
   @extend small;
 }
@@ -345,4 +352,18 @@ body {
 
 .less-strong {
   opacity: 0.65;
+}
+
+.gray-link {
+  a,
+  & {
+    color: #6c757d !important; // new bootstrap: $gray-600
+    opacity: 0.65;
+    text-decoration: underline;
+  }
+  &:hover,
+  &:active,
+  &.active {
+    opacity: 0.9;
+  }
 }
