--- a/app/assets/stylesheets/legacy_includes/slick.scss
+++ b/app/assets/stylesheets/legacy_includes/slick.scss
@@ -8,8 +8,6 @@ $slick-loader-path: "/assets/" !default;
 $slick-arrow-color: white !default;
 $slick-dot-color: black !default;
 $slick-dot-color-active: $slick-dot-color !default;
-$slick-prev-character: "<" !default;
-$slick-next-character: ">" !default;
 $slick-dot-character: "•" !default;
 $slick-dot-size: 6px !default;
 $slick-opacity-default: 0.75 !default;
@@ -187,15 +185,14 @@ $slick-opacity-not-active: 0.25 !default;
   }
 }
 
-.slick-prev:before,
-.slick-next:before {
-  font-family: $slick-font-family;
-  font-size: 40px;
-  line-height: 1;
+.slick-prev::before,
+.slick-next::before {
   color: $slick-arrow-color;
-  opacity: $slick-opacity-default;
-  -webkit-font-smoothing: antialiased;
+  font-size: 40px;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  line-height: 1;
+  opacity: $slick-opacity-default;
 }
 
 .slick-prev {
@@ -205,14 +202,6 @@ $slick-opacity-not-active: 0.25 !default;
     left: auto;
     right: -25px;
   }
-
-  &:before {
-    content: $slick-prev-character;
-
-    [dir="rtl"] & {
-      content: $slick-next-character;
-    }
-  }
 }
 
 .slick-next {
@@ -221,14 +210,6 @@ $slick-opacity-not-active: 0.25 !default;
   [dir="rtl"] & {
     left: -25px;
     right: auto;
-  }
-
-  &:before {
-    content: $slick-next-character;
-
-    [dir="rtl"] & {
-      content: $slick-prev-character;
-    }
   }
 }
 
