--- a/app/views/layouts/application_revised.html.haml
+++ b/app/views/layouts/application_revised.html.haml
@@ -90,6 +90,9 @@
           %a#primary_nav_hamburgler
             &#9776;
         %ul.primary-main-menu
+          %li.primary-nav-item.d-lg-none
+            = link_to t(".search_bikes"), default_bike_search_path, class: 'nav-link', id: 'search_bikes_header_link'
+          %li.divider-nav-item.d-lg-none
           - if current_user_or_unconfirmed_user.present?
             %li.primary-nav-item
               %a.nav-link.settings-link.primary-nav-link-with-submenu#setting_submenu{ "aria-haspopup" => "true", "aria-expanded" => "false", data: { toggle: "dropdown" } }
@@ -131,7 +134,7 @@
             = active_link t(".donate"), support_the_index_path, class: 'nav-link'
           %li.primary-nav-item
             = active_link t(".blog"), news_index_path, class: 'nav-link', match_controller: true
-          %li.primary-nav-item
+          %li.primary-nav-item.d-none.d-lg-block
             = active_link t(".search_bikes"), default_bike_search_path, class: 'nav-link', id: 'search_bikes_header_link', match_controller: true
     = render 'layouts/revised_messages'
 
