--- a/app/assets/stylesheets/revised/sections/primary_header_nav.scss
+++ b/app/assets/stylesheets/revised/sections/primary_header_nav.scss
@@ -85,7 +85,7 @@ $mainmenu-open-zindex: 10;
     font-family: courier;
   }
 
-  .settings-link svg {
+  .primary-nav-item .settings-link {
     display: none;
   }
 
@@ -123,7 +123,7 @@ $mainmenu-open-zindex: 10;
       display: inline-block;
       font-size: 90%;
       font-weight: 800;
-      margin-left: .2rem;
+      margin-left: 0.2rem;
     }
   }
 
@@ -333,6 +333,7 @@ $mainmenu-open-zindex: 10;
 
     .hamburgler {
       padding-right: $mainmenu-width - 5%;
+      padding-left: 10%; // Ensure we cover the links when scrolling
     }
 
     .primary-main-menu {
@@ -412,12 +413,9 @@ $mainmenu-open-zindex: 10;
       }
 
       .settings-link {
+        display: block;
         padding-top: 0.5 * $vertical-height;
         padding-bottom: 0.5 * $vertical-height;
-
-        .settings-text {
-          display: none;
-        }
 
         svg {
           display: block;
