--- a/app/assets/stylesheets/revised.scss
+++ b/app/assets/stylesheets/revised.scss
@@ -377,21 +377,13 @@ body {
 $displays: none, inline, inline-block, block, table, table-row, table-cell, flex,
   inline-flex !default;
 
-$grid-breakpoints-431: (
-  xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px
-) !default;
-
 @function breakpoint-infix($name, $breakpoints: $grid-breakpoints) {
   @return if(breakpoint-min($name, $breakpoints) == null, "", "-#{$name}");
 }
 
-@each $breakpoint in map-keys($grid-breakpoints-431) {
+@each $breakpoint in map-keys($grid-breakpoints) {
   @include media-breakpoint-up($breakpoint) {
-    $infix: breakpoint-infix($breakpoint, $grid-breakpoints-431);
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
 
     @each $value in $displays {
       .d#{$infix}-#{$value} {
