--- a/app/views/organized/bikes/_list.html.haml
+++ b/app/views/organized/bikes/_list.html.haml
@@ -9,47 +9,47 @@
       = number_with_delimiter(count)
       = "bike".pluralize(count)
     registered
-
-%table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border
-  %thead.small-header
-    %tr
-      %th.date-added
-        Added&nbsp;<small class="convertTimezone"></small>
-      %th Manufacturer
-      %th Model
-      %th Color
-      %th Sent to
-      / %th Claimed
-      - if @bike_code.present?
-        %th
-          Link
-          %br
-          Sticker
-  %tbody
-    - @bikes.each do |bike|
+.full-screen-table
+  %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border
+    %thead.small-header
       %tr
-        %td
-          %a.convertTime{ href: bike_path(bike) }
-            = l bike.created_at, format: :convert_time
-        %td
-          = bike.mnfg_name
-        %td
-          = bike.frame_model
-        %td
-          = bike.frame_colors.to_sentence
-        %td
-          = bike.first_owner_email
-          %small.less-strong
-            - if bike.creation_description
-              = bike.creation_description
-            - unless bike.owner_email == bike.first_owner_email
-              (sent to a new owner)
-        / %td
-        /   = "&#x2713;".html_safe if bike.user?
+        %th.date-added
+          Added&nbsp;<small class="convertTimezone"></small>
+        %th Manufacturer
+        %th Model
+        %th Color
+        %th Sent to
+        / %th Claimed
         - if @bike_code.present?
+          %th
+            Link
+            %br
+            Sticker
+    %tbody
+      - @bikes.each do |bike|
+        %tr
           %td
-            %small
-              = link_to "Link", bike_code_path(id: @bike_code.code, organization_id: @bike_code.organization_id, bike_id: bike.id), method: "PUT"
-  - if defined?(@bikes.total_count)
-    .paginate-container.paginate-container-bottom
-      = paginate @bikes
+            %a.convertTime{ href: bike_path(bike) }
+              = l bike.created_at, format: :convert_time
+          %td
+            = bike.mnfg_name
+          %td
+            = bike.frame_model
+          %td
+            = bike.frame_colors.to_sentence
+          %td
+            = bike.first_owner_email
+            %small.less-strong
+              - if bike.creation_description
+                = bike.creation_description
+              - unless bike.owner_email == bike.first_owner_email
+                (sent to a new owner)
+          / %td
+          /   = "&#x2713;".html_safe if bike.user?
+          - if @bike_code.present?
+            %td
+              %small
+                = link_to "Link", bike_code_path(id: @bike_code.code, organization_id: @bike_code.organization_id, bike_id: bike.id), method: "PUT"
+- if defined?(@bikes.total_count)
+  .paginate-container.paginate-container-bottom
+    = paginate @bikes
