fix template bug

--- a/app/views/shared/_edit_bike_skeleton.html.haml
+++ b/app/views/shared/_edit_bike_skeleton.html.haml
@@ -16,7 +16,7 @@
         %em
           = @bike.owner_email
         - if @bike.authorized_by_organization?(org: passive_organization)
-          but #{passive_organization.short_name} has permission to edit
+          but #{passive_organization&.short_name} has permission to edit
         - else # it's almost certainly because the user hasn't claimed it
           but it hasn't been claimed yet
     %p.mb-4
